<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.globalappinitiative.natakallam.HomeFragment"
    android:padding="@dimen/activity_horizontal_margin">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_calendar"
        app:civ_border_color="@color/homeColor"
        app:civ_border_width="4dp"
        app:civ_shadow="false"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="#8BC34A"
        android:onClick="openProfile"
        />

    <Button
        android:id="@+id/profileName"
        android:textAllCaps="false"
        android:theme="@style/AppTheme.ButtonColoredHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profilePicture"
        android:textSize="30sp"
        android:text="@string/example_profile"
        android:onClick="openProfile"
        />

    <TextView
        android:id="@+id/nextSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/profileName"
        android:textSize="20sp"
        android:text="@string/next_session"
        />

    <Button
        android:id="@+id/session_date"
        android:theme="@style/AppTheme.ButtonColoredHome"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true"
        android:layout_below="@id/nextSession"
        android:gravity="center"
        android:textSize="55sp"
        android:text="@string/session_date"
        />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="addSession"
        />


</RelativeLayout>
