<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.globalappinitiative.natakallam.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/short_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/lorem"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/hobbies"
            android:textAllCaps="true"
            android:textColor="@color/homeColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/example_hobbies" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cp"
            android:textAllCaps="true"
            android:textColor="@color/homeColor"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_horizontal">
            <TableRow
                android:layout_marginBottom="10dp">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calendar"
                    app:civ_border_color="@color/homeColor"
                    app:civ_border_width="4dp"
                    app:civ_shadow="false"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#8BC34A"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_profile"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_email"
                    android:layout_gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_marginBottom="10dp">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calendar"
                    app:civ_border_color="@color/homeColor"
                    app:civ_border_width="4dp"
                    app:civ_shadow="false"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#8BC34A"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_profile"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_email"
                    android:layout_gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_marginBottom="10dp">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calendar"
                    app:civ_border_color="@color/homeColor"
                    app:civ_border_width="4dp"
                    app:civ_shadow="false"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#8BC34A"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_profile"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_email"
                    android:layout_gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_marginBottom="10dp">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calendar"
                    app:civ_border_color="@color/homeColor"
                    app:civ_border_width="4dp"
                    app:civ_shadow="false"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#8BC34A"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_profile"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_email"
                    android:layout_gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_marginBottom="10dp">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calendar"
                    app:civ_border_color="@color/homeColor"
                    app:civ_border_width="4dp"
                    app:civ_shadow="false"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#8BC34A"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_profile"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_email"
                    android:layout_gravity="center"
                    />
            </TableRow>
            <TableRow
                android:layout_marginBottom="10dp">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calendar"
                    app:civ_border_color="@color/homeColor"
                    app:civ_border_width="4dp"
                    app:civ_shadow="false"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#8BC34A"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_profile"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/example_email"
                    android:layout_gravity="center"
                    />
            </TableRow>

        </TableLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
